[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Rocher <jeanb.rocher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
reorder-python-imports = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
